HelloUltraviolet/Fixtures/RejectedSource/Keys/KeyEscapeDeferredAccess/Expected.uv
//! Expected diagnostic metadata for the KeyEscapeDeferredAccess rejected-source specimen.

expectedDiagnostic("E-CON-0006", "requirement.19.KeyEscapeRestrictions")
